manifests/apps/ponycloud/nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        pre.hook.backup.velero.io/container: app
        pre.hook.backup.velero.io/command: '["/sbin/runuser", "-u", "www-data", "php", "--", "occ", "maintenance:mode", "--on"]'
        post.hook.backup.velero.io/container: app
        post.hook.backup.velero.io/command: '["/sbin/runuser", "-u", "www-data", "php", "--", "occ", "maintenance:mode", "--off"]'
      labels:
        app: nextcloud
    spec:
      containers:
        - name: web
          image: nginx:1.24.0
          volumeMounts:
            - name: nextcloud-data
              mountPath: /var/www/html
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          ports:
            - containerPort: 80
        - name: app
          image: nextcloud:26.0.9-fpm
          volumeMounts:
            - name: nextcloud-data
              mountPath: /var/www/html
        - name: cron
          image: nextcloud:26-fpm
          command: ["/cron.sh"]
          volumeMounts:
            - name: nextcloud-data
              mountPath: /var/www/html
      volumes:
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data
        - name: config
          configMap:
            name: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 20g
  name: nextcloud
  namespace: ponycloud
spec:
  ingressClassName: nginx
  rules:
  - host: cloud.loutre.tel
    http:
      paths:
      - backend:
          service:
            name: nextcloud
            port:
              name: http
        path: /
        pathType: Prefix
  - host: cloud.kevinsztern.fr
    http:
      paths:
      - backend:
          service:
            name: nextcloud
            port:
              name: http
        path: /
        pathType: Prefix
